--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/styles.css">
+	<link rel="stylesheet" href="node_modules/toastr/build/toastr.min.css">
 
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
